--- a/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
+++ b/03-spring-boot-hibernate-jpa-crud/01-cruddemo-student/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-
-
-
 spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
-
+spring.jpa.hibernate.ddl-auto=create
+# Turn off the spring boot banner
 spring.main.banner-mode=off
-logging.level.root=warn
+# Reduce logging level. Set logging level to warn
+logging.level.root=debug
+# Add logging configs to display SQL statements
+logging.level.org.hibernate.sql=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
